# nexergy

./: .gitignore  Cargo.toml  README.md  TODO.md  nexergy_config.yaml
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/nexergy-cli/: Cargo.toml
crates/nexergy-cli/src/: main.rs
crates/nexergy-core/: Cargo.toml
crates/nexergy-core/src/: io.rs  lib.rs  schema.rs
crates/nexergy-ingest/: Cargo.toml
crates/nexergy-ingest/src/: entsoe.rs  gas.rs  knmi.rs  lib.rs  prices.rs
crates/nexergy-model/: Cargo.toml
crates/nexergy-model/src/: lib.rs
data/: nl_energy_prices_2013.json  nl_energy_prices_2014.json  nl_energy_prices_2015.json  nl_energy_prices_2016.json  nl_energy_prices_2017.json  nl_energy_prices_2018.json  nl_energy_prices_2019.json  nl_energy_prices_2020.json  nl_energy_prices_2021.json  nl_energy_prices_2022.json  nl_energy_prices_2023.json  nl_energy_prices_2024.json  nl_energy_prices_2025.json  nl_gas_prices_2018-2025.json
