[workspace]
members = [
    "crates/nexergy-core",
    "crates/nexergy-ingest",
    "crates/nexergy-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
polars = { version = "0.50", default-features = false, features = ["parquet", "csv"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls", "blocking"] }
quick-xml = "0.37"
url = "2"
regex = "1"
rayon = "1"
walkdir = "2"
