[workspace]
members = [
    "crates/nexergy-core",
    "crates/nexergy-ingest",
    "crates/nexergy-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.8"
clap = { version = "4", features = ["derive"] }
polars = { version = "0.43", default-features = false, features = ["parquet", "csv"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls", "blocking"] }
glob = "0.3"
walkdir = "2"
rayon = "1"
regex = "1"
