[package]
name = "nexergy-model"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
polars = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
[dependencies.nexergy-core]
path = "../nexergy-core"

